--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- Add your site or application content here -->
 
-		Video Test:<BR>
+		Video Homework 1:<BR>
 		<video width="320" height="240" controls>
 		<source src="media/small.webm" type="video/webm">
 		 <source src="media/small.ogv" type="video/ogg">
