--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 		Video Homework 1:<BR>
 		<video width="320" height="240" controls>
+		<source src="media/small.mp4" type="video/mp4">
 		<source src="media/small.webm" type="video/webm">
 		 <source src="media/small.ogv" type="video/ogg">
 			Video not playing? <a href="pics/video/gizmo.mp4">Download file</a> instead
