--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
 		Video Homework 1:<BR>
 		<video width="320" height="240" controls>
-		<source src="media/small.mp4" type="video/mp4">
-		<source src="media/small.webm" type="video/webm">
-		 <source src="media/small.ogv" type="video/ogg">
-			Video not playing? <a href="pics/video/gizmo.mp4">Download file</a> instead
+			<source src="media/small.mp4" type="video/mp4">
+			<source src="media/small.webm" type="video/webm">
+			<source src="media/small.ogv" type="video/ogg">
+			Video not playing? <a href="media/small.mp4">Download file</a> instead
 		</video> 
 		
         <script src="js/vendor/zepto.min.js"></script>
