--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
 			Video not playing? <a href="media/small.mp4">Download file</a> instead
 		</video> 
 		
+		<p> separateur </p>
+		
+		<video id="introVideo" preload="auto" controls>
+    		<source src="media/small.mp4" type="video/mp4"/></source>
+    			Your browser doesn't support html5 video<br />
+		</video>
+		
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
 
